# g2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  basic.cpp  basic.yml
include/: galaxy.h
scripts/: getdeps.sh
src/: CMakeLists.txt  galaxy.cpp  galaxy.hpp
src/config/: CMakeLists.txt  load.hpp  make_tree.hpp  types.hpp
src/runtime/: CMakeLists.txt  execute.hpp  glfw_error.hpp  initialise.hpp  make_system.hpp  system.hpp  window.hpp
src/runtime/test/: test_initialise.cpp  test_make_system.cpp  test_system.cpp  test_window.cpp
src/scene_tree/: CMakeLists.txt  load_yml.hpp  make_tree.hpp  stree.hpp
src/scene_tree/test/: test_load_yml.cpp  test_make_tree.cpp  test_stree.cpp
src/test/: test_galaxy.cpp
src/utility/: CMakeLists.txt  character_sequence.hpp  compose.hpp  current_fn.hpp  either.hpp  function_ref.hpp  is_valid.hpp  monad.hpp  newtype.hpp  readonly.hpp  scoped_file.hpp  static_const.hpp  type.hpp  unsupported_error.hpp  variant.hpp
src/utility/concepts/: requires.hpp
src/utility/ml/: CMakeLists.txt  max_element.h
src/utility/ml/test/: test_max_element.cpp
src/utility/monad/: CMakeLists.txt  optional.hpp
src/utility/monad/test/: test_optional_monad.cpp
src/utility/tagged_tuple/: tag.hpp  tagged_tuple.hpp  typed_tag.hpp
src/utility/test/: test_compose.cpp  test_variant.cpp
src/utility/variant/: bad_variant_access.hpp  nullvariant.hpp
src/utility/variant/detail/: tagged_union.hpp
test/: CMakeLists.txt
test/runtime/: CMakeLists.txt  test_system.cpp  test_window.cpp
test/scene_tree/: CMakeLists.txt  test_load_yml.cpp  test_make_tree.cpp
test/utility/: CMakeLists.txt  test_compose.cpp  test_scoped_file.cpp
test/utility/ml/: CMakeLists.txt  test_max_element.cpp
test/yaml/: CMakeLists.txt
tools/: CMakeLists.txt
tools/mockglfw/: CMakeLists.txt  mockglfw.hpp
tools/mockglfw/src/: mockglfw.cpp  mockglfw.hpp
